// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/view_image/popover_bar/PopoverBar should match snapshot for downloadable file when externally hosted 1`] = `
<div
  className="modal-button-bar footer--show"
>
  <span
    className="pull-left text"
  >
    <FormattedMessage
      defaultMessage="File {count, number} of {total, number}"
      id="view_image_popover.file"
      values={
        Object {
          "count": 1,
          "total": 0,
        }
      }
    />
  </span>
  <div
    className="image-links"
  >
    <a
      className="text"
      href=""
      rel="noopener noreferrer"
      target="_blank"
    >
      <FormattedMessage
        defaultMessage="Open"
        id="view_image_popover.open"
        values={Object {}}
      />
    </a>
  </div>
</div>
`;

exports[`components/view_image/popover_bar/PopoverBar should match snapshot for downloadable file when externally hosted and on the desktop app 1`] = `
<div
  className="modal-button-bar footer--show"
>
  <span
    className="pull-left text"
  >
    <FormattedMessage
      defaultMessage="File {count, number} of {total, number}"
      id="view_image_popover.file"
      values={
        Object {
          "count": 1,
          "total": 0,
        }
      }
    />
  </span>
  <div
    className="image-links"
  >
    <a
      className="text"
      download="img.png"
      href=""
      rel="noopener noreferrer"
      target="_blank"
    >
      <FormattedMessage
        defaultMessage="Download"
        id="view_image_popover.download"
        values={Object {}}
      />
    </a>
  </div>
</div>
`;

exports[`components/view_image/popover_bar/PopoverBar should match snapshot for downloadable file when internally hosted 1`] = `
<div
  className="modal-button-bar footer--show"
>
  <span
    className="pull-left text"
  >
    <FormattedMessage
      defaultMessage="File {count, number} of {total, number}"
      id="view_image_popover.file"
      values={
        Object {
          "count": 1,
          "total": 0,
        }
      }
    />
  </span>
  <div
    className="image-links"
  >
    <a
      className="text"
      download="img.png"
      href=""
      rel="noopener noreferrer"
      target="_blank"
    >
      <FormattedMessage
        defaultMessage="Download"
        id="view_image_popover.download"
        values={Object {}}
      />
    </a>
  </div>
</div>
`;

exports[`components/view_image/popover_bar/PopoverBar should match snapshot for downloadable file when internally hosted and on the desktop app 1`] = `
<div
  className="modal-button-bar footer--show"
>
  <span
    className="pull-left text"
  >
    <FormattedMessage
      defaultMessage="File {count, number} of {total, number}"
      id="view_image_popover.file"
      values={
        Object {
          "count": 1,
          "total": 0,
        }
      }
    />
  </span>
  <div
    className="image-links"
  >
    <a
      className="text"
      download="img.png"
      href=""
      rel="noopener noreferrer"
      target="_blank"
    >
      <FormattedMessage
        defaultMessage="Download"
        id="view_image_popover.download"
        values={Object {}}
      />
    </a>
  </div>
</div>
`;

exports[`components/view_image/popover_bar/PopoverBar should match snapshot with public links disabled 1`] = `
<div
  className="modal-button-bar footer--show"
>
  <span
    className="pull-left text"
  >
    <FormattedMessage
      defaultMessage="File {count, number} of {total, number}"
      id="view_image_popover.file"
      values={
        Object {
          "count": 1,
          "total": 0,
        }
      }
    />
  </span>
  <div
    className="image-links"
  >
    <a
      className="text"
      download=""
      href=""
      rel="noopener noreferrer"
      target="_blank"
    >
      <FormattedMessage
        defaultMessage="Download"
        id="view_image_popover.download"
        values={Object {}}
      />
    </a>
  </div>
</div>
`;

exports[`components/view_image/popover_bar/PopoverBar should match snapshot with public links enabled 1`] = `
<div
  className="modal-button-bar footer--show"
>
  <span
    className="pull-left text"
  >
    <FormattedMessage
      defaultMessage="File {count, number} of {total, number}"
      id="view_image_popover.file"
      values={
        Object {
          "count": 1,
          "total": 0,
        }
      }
    />
  </span>
  <div
    className="image-links"
  >
    <div>
      <a
        className="public-link text"
        data-title="Public Image"
        href="#"
      >
        <FormattedMessage
          defaultMessage="Get Public Link"
          id="view_image_popover.publicLink"
          values={Object {}}
        />
      </a>
      <span
        className="text"
      >
         | 
      </span>
    </div>
    <a
      className="text"
      download=""
      href=""
      rel="noopener noreferrer"
      target="_blank"
    >
      <FormattedMessage
        defaultMessage="Download"
        id="view_image_popover.download"
        values={Object {}}
      />
    </a>
  </div>
</div>
`;
